--- a/photos.css
+++ b/photos.css
@@ -1,8 +1,8 @@
 
 /*      
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Alvaro Gonzalez
+    Date:   11/20/18
     Filename: photos.css
 */
 
